# cineris

./: .gitignore  CMakeLists.txt  LICENSE  README.md  game-architecture.md  game-ideas.md
dependencies/include/glad/: glad.h
resources/levels/: ashmoor_entrance.level
resources/textures/Rocks024L_1K/: Rocks024L_1K-PNG.blend  Rocks024L_1K-PNG.mtlx  Rocks024L_1K-PNG.tres  Rocks024L_1K-PNG.usdc
shaders/: cube.frag  cube.vert  floorShader.frag  floorShader.vert  lightning.frag  lightning.vert  ocean.frag  ocean.vert  vertex.glsl  wallShader.frag
src/: config.h  glad.c  include.h  main.cpp  paths.h
src/core/: camera.cpp  camera.h  debug.cpp  debug.h  engine.cpp  engine.h  input.cpp  input.h  resource_manager.h  window.cpp  window.h
src/game/: game_object.cpp  game_object.h  world.cpp  world.h
src/game/controllers/: player_controller.cpp  player_controller.h
src/game/world/: level_loader.cpp  level_loader.h  world.cpp  world.h  world_object.cpp  world_object.h
src/input/: input_manager.cpp  input_manager.h
src/math/: aabb.h
src/player/: player.cpp  player.h
src/renderer/: mesh.cpp  mesh.h  render_context.h  shader.cpp  shader.h  texture.cpp  texture.h
src/renderer/shader/: shader.cpp  shader.h
